--- a/index.html
+++ b/index.html
@@ -9,30 +9,17 @@
         <script>
             function ChangeColor(){
                  var SeletColor = document.getElementById("selectColor").value;
-                 var bodyGround = documen.getElementById("body");
-                 bodyGround.style.bacgrouncolor = SeletColor;
+                 var bodyGround = document.getElementById("body");
+                 bodyGround.style.backgroundColor = SeletColor;
             }
-                function validFrom(){
-                    var name = document.regiset.username.value;
-                    var password =document.regiset.password.value;
-                    var email =document.regiset.email.value;
-                    if(name == null || name.length <= 3 ||name.length >= 10 )
-                    {
-                         alert("The Name Is Wrong !");
-                         return flase;
-                    }
-                    if(password= null || ){
-
-                    }
-                }
+               
         </script>
     </head>
-    <body>
-
+    <body id="body">
       <div id="conainer-change-color" onchange="ChangeColor()">
     <select id="selectColor">
-    <option value="black">Dark</option>
-    <option value="white">Light</option>
+        <option value="white">Light</option>
+        <option value="black">Dark</option>
     </select>
 </div>
         <form name="regiset" method="post" onsubmit="return validFrom()">
