--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <label>E-mail</label>
                 <input type="email" name="email">
                 <label>age</label>
-                <select name="Gender" id="">
-                    <option value="Male">Over 18</option>
-                    <option value="Female">Less 18</option>
+                <select name="Age" id="">
+                    <option value="over">Over 18</option>
+                    <option value="less">Less 18</option>
                 </select>
                 <button type="submit" value="Send Your Data">Regiset</button>
             </fieldset>
