--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 var email = document.regiset.email.value;
                 if(name == null || name.length <= 3 || name.length >= 10 )
                 {
-                   
+                    alert("Write the name word!");
+                     return flase;
                 }
                 if(password= null ){ 
                      alert("Write the bass word!");
